@@ -1,6 +1,7 @@
 <?php
 	if(empty($title)){$title = '';}
-	$header_data = load_model('header', ['title' => $title]);
+	if(empty($head_tags)){$head_tags = [];}
+	$header_data = load_model('header', ['title' => $title, 'header_tags' => $head_tags]);
 	if(empty($header_data['logo'])){
 		$header_data['logo'] = URI.'/upload/favicon.png';
 	}
