@@ -34,19 +34,23 @@
 		$print_menu = $_SESSION['header_menu'];
 	}
 
+	$default_tags = [
+		'<script type="text/javascript" src="'.build_slug('/js/jquery.min.js').'"></script>',
+		'<script type="text/javascript" src="'.build_slug('/js/jquery-ui.min.js').'"></script>',
+		'<script type="text/javascript" src="'.build_slug('/js/aPopup.js').'"></script>',
+		'<script type="text/javascript" src="'.build_slug('/js/lazy.js').'"></script>',
+		'<link rel="stylesheet" href="'.build_slug('/js/jquery-ui.min.css').'" type="text/css">',
+		'<link rel="stylesheet" href="'.build_slug('/css/layout.css').'" type="text/css">'
+	];
+
+	$to_return = array_merge($default_tags, $header_tags);
+
 	return $header_data = [
 		'stylesheet' => $_SESSION['css'],
 		'logo' => '',
 		'logo_title' => '',
 		'logo_alt' => '',
-		'head_tags' => [
-			'<script type="text/javascript" src="'.build_slug('/js/jquery.min.js').'"></script>',
-			'<script type="text/javascript" src="'.build_slug('/js/jquery-ui.min.js').'"></script>',
-			'<script type="text/javascript" src="'.build_slug('/js/aPopup.js').'"></script>',
-			'<script type="text/javascript" src="'.build_slug('/js/lazy.js').'"></script>',
-			'<link rel="stylesheet" href="'.build_slug('/js/jquery-ui.min.css').'" type="text/css">',
-			'<link rel="stylesheet" href="'.build_slug('/css/layout.css').'" type="text/css">'
-		],
+		'head_tags' => $to_return,
 		'header_nav' => $print_menu,
 		'title' => $title
 	];
