@@ -1,1 +1,2 @@
-Updated jQuery
+Added epub reader and epub import
+Improved PDF file reading
